<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:drawableLeft="@drawable/connect"
            android:text="@string/connect" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:drawableLeft="@drawable/disconnect"
            android:text="@string/disconnect" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/VIN"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:maxLines="2"
        android:textAlignment="center"
        android:hint="@string/vin" />
    <EditText
        android:id="@+id/edit"
        android:hint="@string/edit"
        android:textSize="13sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ZNL"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:hint="@string/znl" />

        <EditText
            android:id="@+id/ZCDY"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:hint="@string/zcdy" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/SOC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:hint="@string/soc" />

        <EditText
            android:id="@+id/RLPC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:hint="@string/rlpc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/XSLC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:hint="@string/xslc" />

        <EditText
            android:id="@+id/SCQY"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textAlignment="center"
            android:hint="@string/scqy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:drawableLeft="@drawable/send1"
            android:text="@string/send" />

        <Button
            android:id="@+id/Start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:drawableLeft="@drawable/start1"
            android:text="@string/start" />

        <Button
            android:id="@+id/Stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/stop1"
            android:text="@string/stop"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/csdcsoc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="初始电池SOC(%)"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/ssdcsoc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="实时电池SOC(%)"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/sscdrl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="实时充电容量(AH)"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/csdcsocV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/ssdcsocV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/sscdrlV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/scznl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="实测电池总能量(kWh)"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="测试状态与结果"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/scznlV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/statusV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ssdl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="实时电流(A)"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/smxh"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="生命信号"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/yqdl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="仪器电量(%)"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ssdlV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"

            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/smxhV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>
        <TextView
            android:id="@+id/yqdlV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/blue"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zhycjgV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/lime"
            />

        <TextView
            android:id="@+id/zhycjg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="最后结果"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/TestStatusV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/lime"
            />
        <TextView
            android:id="@+id/TestStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="测试状态"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/FaultStatusV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/lime"
            />
        <TextView
            android:id="@+id/FaultStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="错误状态"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/Clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:drawableLeft="@drawable/clear"
            android:text="清除消息" /> </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/receive_message"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:layout_height="match_parent"
            android:background="@drawable/texyviewborder"
            android:textColor="@color/red"
            android:hint="系统消息"
            android:textAlignment="center"
            android:scrollbars="vertical"/>
    </LinearLayout>
</LinearLayout>